DB creation always fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,9 @@ server.port=8090
 
 #database-creation
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #h2
 spring.h2.console.enabled=true
