--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@ server.port=8090
 
 #database-creation
 spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #h2
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:./backend/src/main/resources/data/demodb
+spring.datasource.url=jdbc:h2:file:./backend/src/main/resources/data/demodb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driverClassName=org.h2.Driver
