--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8090
 
+logging.level.org.springframework.web=TRACE
+#logging.level.org.springframework.jdbc=TRACE
+
 #database-creation
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto = update
@@ -9,7 +12,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #h2
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:file:./backend/src/main/resources/data/demodb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:file:./src/main/resources/data/demodb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
 spring.datasource.username=sa
 spring.datasource.password=sa
 spring.datasource.driverClassName=org.h2.Driver
@@ -20,6 +23,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.graphql.cors.allowed-methods=GET, POST, PATCH, PUT, DELETE, OPTIONS, HEAD
 
 #security
+logging.level.org.springframework.security=DEBUG
 #spring.security.user.name=admin
 #spring.security.user.password=admin
 #spring.security.user.roles=ADMIN
